--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,33 @@ body {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 ul {
   list-style-type: none;
 }
 button {
+  cursor: pointer;
 }
+
 a {
   text-decoration: none;
 }
 
+.container {
+  width: 100%;
+  padding-left: 156px;
+  padding-right: 156px;
+  margin: 0 auto;
+}
 .accent {
   color: #2e2f42;
 }
@@ -27,6 +45,13 @@ a {
   color: #2e2f42;
 }
 
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -35,16 +60,25 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 76px;
 }
 
 span .accent {
   color: #f4f4fd;
 }
+
 .header-menu-list {
   color: #2e2f42;
+  display: flex;
+  margin-right: 332px;
 }
 
 .header-menu-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-right: 40px;
 }
 
 .header-menu-link {
@@ -53,6 +87,9 @@ span .accent {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: inline-block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-menu-link:hover,
@@ -70,13 +107,18 @@ address {
 }
 
 .header-address-list {
+  display: inline-block;
+  white-space: nowrap;
+  justify-content: space-between;
 }
 
 .header-address-item {
+  display: inline-block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding-right: 40px;
 }
 
 .header-address-item:hover,
@@ -90,6 +132,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-right: 0;
 }
 
 .header-address-item {
@@ -108,19 +151,44 @@ address {
 /* -----------HERO---------- */
 
 .section-hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 600px;
   background-color: #2e2f42;
 }
 
-.hero-heading {
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.hero-title {
+  width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin-bottom: 48px;
 }
 
 .hero-btn {
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -128,6 +196,8 @@ address {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  display: flex;
+  margin: 0 auto;
 }
 
 .hero-btn:hover,
@@ -142,9 +212,20 @@ address {
 .section-about-us {
 }
 .about-us-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 120px 156px;
 }
 .about-us-item {
+  width: 264px;
+  margin-right: 24px;
 }
+.about-us-item:last-child {
+  margin-right: 0;
+}
+
 .about-us-title {
   font-weight: 500;
   font-size: 20px;
@@ -165,6 +246,8 @@ address {
 /* --------------OUR TEAM----------- */
 .section-our-team {
   background-color: #f4f4fd;
+  padding-top: 120px;
+  margin-bottom: 120px;
 }
 
 .our-team-title {
@@ -175,18 +258,43 @@ address {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-top: 120px;
+  margin-bottom: 72px;
 }
 
 .our-team-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .our-team-item {
+  display: flex;
+
+  flex-direction: column;
   background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  width: 264px;
+  height: 380px;
+  margin-right: 24px;
+  margin-bottom: 120px;
+
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+}
+
+.our-team-item:last-child {
+  margin-right: 0;
 }
 
 .our-team-image {
 }
 
+.team-info {
+  padding: 32px 16px;
+}
 .our-team-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -194,6 +302,7 @@ address {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .our-team-text {
@@ -209,6 +318,7 @@ address {
 /* ----------PORTFOLIO--------------- */
 
 .section-portfolio {
+  margin-bottom: 120px;
 }
 .portfolio-title {
   font-weight: 700;
@@ -218,13 +328,37 @@ address {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
 }
+
 .portfolio-item {
+  width: calc((100 - 48px) / 3);
 }
 .portfolio-image {
+  max-width: 360px;
 }
+
+.portfolio-info {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  width: 360px;
+  height: 120px;
+}
+
 .portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -244,11 +378,21 @@ address {
 /* --------------FOOTER------------------ */
 
 .footer {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   background-color: #2e2f42;
   color: #f4f4fd;
+  padding-top: 100px;
+  padding-left: 156px;
+  padding-bottom: 100px;
+}
+
+.footer-container {
+  max-width: 264px;
 }
 .logo {
   color: #4d5ae5;
