--- a/css/styles.css
+++ b/css/styles.css
@@ -26,9 +26,9 @@ a {
 }
 
 .container {
-  width: 100%;
-  padding-left: 156px;
-  padding-right: 156px;
+  display: flex;
+  width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 .accent {
@@ -46,10 +46,9 @@ a {
 }
 
 .header .container {
-  display: flex;
-  justify-content: space-between;
+  width: 1158px;
+  /* justify-content: space-between; */
   align-items: center;
-  width: 100%;
 }
 
 .logo {
@@ -210,6 +209,9 @@ address {
 /*--------------ABOUT US-------------*/
 
 .section-about-us {
+  /* justify-content: space-between;
+  align-items: center;
+  width: 100%; */
 }
 .about-us-list {
   display: flex;
@@ -379,16 +381,20 @@ address {
 
 .footer {
   display: flex;
-  justify-content: flex-start;
-  width: 100%;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   background-color: #2e2f42;
   color: #f4f4fd;
   padding-top: 100px;
-  padding-left: 156px;
+  /* padding-left: 156px; */
   padding-bottom: 100px;
+}
+
+.footer-block {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
 .footer-container {
