--- a/css/styles.css
+++ b/css/styles.css
@@ -221,14 +221,18 @@ span .accent {
 }
 .about-us-list {
   display: flex;
+  flex-wrap: nowrap;
   justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 120px 156px;
+  /* align-items: center; */
+  width: 1158px;
+  padding: 120px 0;
+  gap: 24px;
 }
 .about-us-item {
-  width: 264px;
-  margin-right: 24px;
+  align-items: flex-start;
+  max-width: 264px;
+  width: calc((100% - 72px) / 4);
+  /* margin-right: 24px; */
 }
 .about-us-item:last-child {
   margin-right: 0;
@@ -339,15 +343,17 @@ span .accent {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
-.portfolio-list {
+.portfolio-list,
+.container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width: 1158px;
   gap: 24px;
 }
 
 .portfolio-item {
-  width: calc((100 - 48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-image {
   max-width: 360px;
