--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,10 @@ img {
   color: #2e2f42;
   border-bottom: 1px solid #e7e9fc;
 }
+nav {
+  display: flex;
+  align-items: center;
+}
 
 .header .container {
   width: 1158px;
