--- a/css/styles.css
+++ b/css/styles.css
@@ -59,10 +59,13 @@ header-block {
   width: 1158px;
   align-items: center;
 }
-.container {
-  width: 100%;
+.header .container {
+  display: flex;
+  width: 1158px;
   /* justify-content: space-between; */
   align-items: center;
+  margin: 0;
+  padding: 0 15px;
 }
 
 .logo {
@@ -86,6 +89,11 @@ span .accent {
   color: #2e2f42;
   display: flex;
   margin-right: 332px;
+  gap: 40px;
+}
+
+.header-menu-list:last-child {
+  margin-right: 0;
 }
 
 .header-menu-item {
@@ -115,7 +123,7 @@ span .accent {
   text-decoration: underline;
 }
 
-address {
+.header-address {
   font-style: normal;
   display: flex;
   display: inline-block;
@@ -132,13 +140,17 @@ address {
   gap: 40px;
 }
 
+.header-address-lis:last-child {
+  margin: 0;
+}
+
 .header-address-item {
   display: inline-block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-right: 40px;
+  margin-right: 40px;
 }
 
 .header-address-item:hover,
@@ -177,6 +189,7 @@ address {
   width: 100%;
   min-height: 600px;
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .hidden {
@@ -194,7 +207,7 @@ address {
 }
 
 .hero-title {
-  width: 496px;
+  max-width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -205,6 +218,7 @@ address {
 }
 
 .hero-btn {
+  display: block;
   border-radius: 4px;
   padding: 16px 32px;
   min-width: 169px;
@@ -218,6 +232,7 @@ address {
   cursor: pointer;
   display: flex;
   margin: 0 auto;
+  border: none;
 }
 
 .hero-btn:hover,
@@ -230,10 +245,20 @@ address {
 /*--------------ABOUT US-------------*/
 
 .section-about-us {
-  /* justify-content: space-between;
-  align-items: center;
-  width: 100%; */
+  display: flex;
+  padding: 120px 0;
 }
+.visually-hidden {
+  position: absolute; /* Take it out of the normal document flow */
+  width: 1px; /* Make it 1px wide */
+  height: 1px; /* Make it 1px high */
+  margin: -1px; /* Remove any extra space it might take up */
+  padding: 0; /* Remove any internal padding */
+  border: 0; /* Remove any borders */
+  clip: rect(0, 0, 0, 0); /* Clip the element so it doesn't take up space */
+  overflow: hidden; /* Hide anything that's outside of the clipped area */
+}
+
 .about-us-list {
   display: flex;
   flex-wrap: nowrap;
@@ -243,6 +268,11 @@ address {
   padding: 120px 0;
   gap: 24px;
 }
+
+.about-us-list:last-child {
+  margin-right: 0;
+}
+
 .about-us-item {
   align-items: flex-start;
   max-width: 264px;
@@ -294,6 +324,11 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 24px;
+}
+
+.our-team-list:last-child {
+  margin: 0;
 }
 
 .our-team-item {
@@ -311,17 +346,18 @@ address {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
+  width: calc((100% - 72px) / 4);
 }
 
-.our-team-item:last-child {
+/* .our-team-item:last-child {
   margin-right: 0;
-}
+} */
 
 .our-team-image {
 }
 
 .team-info {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 .our-team-subtitle {
   font-weight: 500;
@@ -346,7 +382,8 @@ address {
 /* ----------PORTFOLIO--------------- */
 
 .section-portfolio {
-  margin-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .portfolio-title {
   font-weight: 700;
@@ -358,13 +395,19 @@ address {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
-.portfolio-list,
-.container {
+.portfolio-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   width: 1158px;
-  gap: 24px;
+  row-gap: 48px;
+  border: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  border-top: none;
+}
+
+.portfolio-list:last-child {
+  margin-bottom: 0;
 }
 
 .portfolio-item {
@@ -395,6 +438,7 @@ address {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .portfolio-text {
   font-size: 16px;
@@ -419,11 +463,11 @@ address {
   padding-bottom: 100px;
 }
 
-.footer-block {
+/* .footer-block {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-}
+} */
 
 .footer-container {
   max-width: 264px;
@@ -432,10 +476,15 @@ address {
   color: #4d5ae5;
 }
 
+.logo .logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
+}
 .footer .accent {
   color: #f4f4fd;
 }
 .footer-text {
+  max-width: 264px;
 }
 
 /* --------------FOOTER------------------ */
