--- a/css/styles.css
+++ b/css/styles.css
@@ -59,14 +59,17 @@ nav {
   width: 1158px;
   align-items: center;
   padding: 0 15px;
+  margin-bottom: 16px;
+  margin: 0;
 }
 .header .container {
   display: flex;
   width: 1158px;
   /* justify-content: space-between; */
   align-items: center;
-  margin: 0;
+  /* margin: 0;
   padding: 0 15px;
+  margin-bottom: 16px; */
 }
 
 .logo {
@@ -128,7 +131,7 @@ span .accent {
 .header-address {
   font-style: normal;
   display: flex;
-  display: inline-block;
+  /* display: inline-block; */
   white-space: nowrap;
   gap: 40px;
 }
@@ -136,7 +139,7 @@ span .accent {
 .header-address-list {
   font-style: normal;
   display: flex;
-  display: inline-block;
+  /* display: inline-block; */
   white-space: nowrap;
   justify-content: space-between;
   gap: 40px;
@@ -466,10 +469,6 @@ span .accent {
   padding-bottom: 100px;
 }
 
-a .logo-footer {
-  display: inline-block;
-  margin-bottom: 16px;
-}
 /* .footer-block {
   width: 1158px;
   padding: 0 15px;
@@ -477,7 +476,9 @@ a .logo-footer {
 } */
 
 .footer-container {
+  display: inline-block;
   max-width: 264px;
+  margin-bottom: 16px;
 }
 .logo {
   color: #4d5ae5;
@@ -490,7 +491,7 @@ a .logo-footer {
 .footer .accent {
   color: #f4f4fd;
 }
-p .footer-text {
+.footer-text {
   max-width: 264px;
 }
 
