--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ nav {
   width: 1158px;
   /* justify-content: space-between; */
   align-items: center;
+  margin: 0;
   /* margin: 0;
   padding: 0 15px;
   margin-bottom: 16px; */
