--- a/css/styles.css
+++ b/css/styles.css
@@ -333,11 +333,11 @@ span .accent {
   margin-top: 120px;
   margin-bottom: 72px;
 }
-.our-team-container {
+/* .our-team-container {
   display: flex;
   width: 1158px;
   justify-content: center;
-}
+} */
 
 .our-team-list {
   display: flex;
