--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ a {
 }
 
 .container {
-  display: flex;
+  /* display: flex; */
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
@@ -58,23 +58,22 @@ nav {
   justify-content: center;
 }
 .container {
-  display: flex;
+  /* display: flex; */
   /* flex-wrap: nowrap; */
   width: 1158px;
-  align-items: center;
+  /* align-items: center; */
   padding: 0 15px;
-  margin-bottom: 16px;
-  margin: 0;
+  /* margin-bottom: 16px; */
+  margin: 0 auto;
 }
 .header .container {
   display: flex;
-  width: 1158px;
-  /* justify-content: space-between; */
+  /* width: 1158px; */
+  justify-content: space-between;
   align-items: center;
-  margin: 0;
-  /* margin: 0;
-  padding: 0 15px;
-  margin-bottom: 16px; */
+  /* margin: 0 auto;
+
+  padding: 0 15px; */
 }
 
 .logo {
@@ -97,8 +96,9 @@ span .accent {
 .header-menu-list {
   color: #2e2f42;
   display: flex;
-  margin-right: 332px;
-  gap: 40px;
+  /* margin-right: 332px; */
+  /* gap: 40px; */
+  padding: 0;
 }
 
 .header-menu-list:last-child {
@@ -107,8 +107,6 @@ span .accent {
 
 .header-menu-item {
   display: flex;
-  padding-top: 24px;
-  padding-bottom: 24px;
   padding-right: 40px;
 }
 
@@ -134,20 +132,20 @@ span .accent {
 }
 
 .header-address {
-  font-style: normal;
   display: flex;
-  /* display: inline-block; */
-  white-space: nowrap;
+  justify-content: center;
   gap: 40px;
+  margin-left: 236px;
 }
 
 .header-address-list {
   font-style: normal;
   display: flex;
   /* display: inline-block; */
-  white-space: nowrap;
-  justify-content: space-between;
-  gap: 40px;
+  /* white-space: nowrap;
+  justify-content: space-between; */
+
+  padding-left: 0;
 }
 
 .header-address-lis:last-child {
@@ -161,6 +159,10 @@ span .accent {
   letter-spacing: 0.02em;
   color: #434455;
   margin-right: 40px;
+}
+
+.header-address-item:last-child {
+  margin-right: 0;
 }
 
 .header-address-item:hover,
@@ -193,9 +195,9 @@ span .accent {
 /* -----------HERO---------- */
 
 .section-hero {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   width: 100%;
   min-height: 600px;
   background-color: #2e2f42;
@@ -224,6 +226,7 @@ span .accent {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin: 0 auto;
   margin-bottom: 48px;
 }
 
@@ -275,8 +278,9 @@ span .accent {
   /* justify-content: center; */
   /* align-items: center; */
   width: 1158px;
-  padding: 120px 0;
+  /* padding: 120px 0; */
   gap: 24px;
+  padding: 0;
 }
 
 .about-us-list:last-child {
@@ -358,8 +362,8 @@ span .accent {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
-  width: 264px;
-  height: 380px;
+  /* width: 264px;
+  height: 380px; */
   margin-right: 24px;
   margin-bottom: 120px;
 
@@ -415,11 +419,11 @@ span .accent {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 1158px;
+  /* width: 1158px; */
   row-gap: 48px;
-  border: 1px solid #e7e9fc;
+  /* border: 1px solid #e7e9fc;
   padding: 32px 16px;
-  border-top: none;
+  border-top: none; */
   column-gap: 24px;
 }
 
@@ -495,7 +499,7 @@ span .accent {
   color: #4d5ae5;
 }
 
-.logo .logo-footer {
+.logo-footer {
   display: inline-block;
   margin-bottom: 16px;
 }
