--- a/css/styles.css
+++ b/css/styles.css
@@ -141,10 +141,6 @@ span .accent {
 .header-address-list {
   font-style: normal;
   display: flex;
-  /* display: inline-block; */
-  /* white-space: nowrap;
-  justify-content: space-between; */
-
   padding-left: 0;
 }
 
@@ -195,9 +191,6 @@ span .accent {
 /* -----------HERO---------- */
 
 .section-hero {
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
   width: 100%;
   min-height: 600px;
   background-color: #2e2f42;
@@ -260,6 +253,7 @@ span .accent {
   display: flex;
   padding: 120px 0;
   justify-content: center;
+  padding: 120px auto;
 }
 .visually-hidden {
   position: absolute; /* Take it out of the normal document flow */
@@ -275,10 +269,7 @@ span .accent {
 .about-us-list {
   display: flex;
   flex-wrap: nowrap;
-  /* justify-content: center; */
-  /* align-items: center; */
   width: 1158px;
-  /* padding: 120px 0; */
   gap: 24px;
   padding: 0;
 }
@@ -337,11 +328,6 @@ span .accent {
   margin-top: 120px;
   margin-bottom: 72px;
 }
-/* .our-team-container {
-  display: flex;
-  width: 1158px;
-  justify-content: center;
-} */
 
 .our-team-list {
   display: flex;
@@ -419,11 +405,8 @@ span .accent {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* width: 1158px; */
+
   row-gap: 48px;
-  /* border: 1px solid #e7e9fc;
-  padding: 32px 16px;
-  border-top: none; */
   column-gap: 24px;
 }
 
@@ -483,12 +466,6 @@ span .accent {
   /* padding-left: 156px; */
   padding-bottom: 100px;
 }
-
-/* .footer-block {
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-} */
 
 .footer-container {
   display: inline-block;
