--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ span .accent {
   color: #2e2f42;
   display: flex;
   /* margin-right: 332px; */
-  /* gap: 40px; */
+  gap: 40px;
   padding: 0;
 }
 
@@ -107,7 +107,7 @@ span .accent {
 
 .header-menu-item {
   display: flex;
-  padding-right: 40px;
+  /* padding-right: 40px; */
 }
 
 .header-menu-link {
@@ -350,7 +350,7 @@ span .accent {
   /* padding: 0px 0px 32px 0px; */
   /* width: 264px;
   height: 380px; */
-  margin-right: 24px;
+  /* margin-right: 24px; */
   /* margin-bottom: 120px; */
 
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -469,17 +469,18 @@ span .accent {
   padding-bottom: 100px;
 }
 
-.footer-container {
+/* .logo .footer {
   display: inline-block;
   max-width: 264px;
   margin-bottom: 16px;
-}
+} */
 .logo {
   color: #4d5ae5;
 }
 
 .logo-footer {
   display: inline-block;
+  padding: 0;
   margin-bottom: 16px;
 }
 .footer .accent {
